# Pure-Python-RPA-Bot-Example

./: .gitignore  Review Cases.xlsx
python-rpa-example-bot/: .gitignore  README.md  README.rst  pyproject.toml
python-rpa-example-bot/python_rpa_example_bot/: main.py
python-rpa-example-bot/tests/: test_aws_python_project.py
