[tool.poetry]
name = "python-rpa-example-bot"
version = "0.1.0"
description = "This is a simple Python RPA bot that demonstrates the rpa automation capabilities with Python"
authors = ["Timothy Lopas <tim@robocorp.com>"]

[tool.poetry.dependencies]
python = "3.7.5"
boto3 = "^1.21.28"
openpyxl = "^3.0.9"
selenium = "^4.1.3"
simple-salesforce = "^1.11.6"
pymsteams = "^0.2.1"

[tool.poetry.dev-dependencies]
pytest = "6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main_script = "python_rpa_example_bot.main:main"