[tool.poetry]
name = "python-rpa-example-bot"
version = "0.2.0"
description = "This is a simple Python RPA bot that demonstrates the rpa automation capabilities with Python"
authors = ["Timothy Lopas <tim@robocorp.com>"]

[tool.poetry.dependencies]
python = "3.9.13"
boto3 = "^1.26.9"
openpyxl = "^3.0.10"
selenium = "^4.6.0"
simple-salesforce = "^1.12.2"
pymsteams = "^0.2.2"

[tool.poetry.dev-dependencies]
pytest = "6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main_script = "python_rpa_example_bot.main:main"